[package]
name = "cargo-config"
version = "0.1.1"
authors = ["Wesley Wiser <wwiser@gmail.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/wesleywiser/cargo-config"
description = "cargo-config allows you get to read information from a project's Cargo.toml file on the command line. Similar in spirit to git config."
edition = "2018"

[dependencies]
toml = "0.5"
serde_json = "1.0"

[features]
default = []

